k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: worker-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: worker
  template: 
    metadata: 
      labels:
        component: worker
    spec: 
      containers:
        - name: worker
          image: cirant3/multi-worker
