k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: postgres-cluster-ip-service 
spec: 
  type: ClusterIP 
  selector: 
    component: postgres # name to apply this service. see *A1 inside postgres-deployment.yaml to find out target
  ports: 
    - port: 5432
      targetPort: 5432
